--- a/ex05/Makefile
+++ b/ex05/Makefile
@@ -6,14 +6,14 @@
 #    By: vmartel <vmartel@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/10/14 19:37:44 by vmartel           #+#    #+#              #
-#    Updated: 2025/10/14 19:38:04 by vmartel          ###   ########.fr        #
+#    Updated: 2025/10/15 10:06:22 by vmartel          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 CXX = c++
 CXXFLAGS = -Wall -Wextra -Werror -std=c++98
 
-SRC =  main.cpp
+SRC =  main.cpp Harl.cpp
 OBJ_DIR = obj
 OBJ = $(SRC:%.cpp=$(OBJ_DIR)/%.o)
 
